--- a/index.html
+++ b/index.html
@@ -9,27 +9,33 @@
 
   <body>
     <div class="container">
-      <div class="box">
-        <h1>BMI Calculator</h1>
-        <div class="content">
-          <div class="input">
-            <label for="height">Height (cm)</label>
-            <input type="number" id="height">
-          </div>
-          <div class="input">
-            <label for="weight">Weight (kg)</label>
-            <input type="number" id="weight">
-          </div>
-          <button id="calculate">Calculate my BMI</button>
+
+<div class="row">
+  <div class="col-6">
+    <div class="box">
+      <h1>BMI Calculator</h1>
+      <div class="content">
+        <div class="input">
+          <label for="height">Height (cm)</label>
+          <input type="number" id="height">
         </div>
-        <div class="result">
-          <p>Your BMI is</p>
-          <div id="result">
-            00.00
-          </div>
-          <p class="comment"></p>
+        <div class="input">
+          <label for="weight">Weight (kg)</label>
+          <input type="number" id="weight">
         </div>
+        <button id="calculate">Calculate my BMI</button>
       </div>
+      <div class="result">
+        <p>Your BMI is</p>
+        <div id="result">
+          00.00
+        </div>
+        <p class="comment"></p>
+      </div>
+    </div>
+  </div>
+
+  </div>
 
     </div>
 
